--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "light-bootstrap-dashboard-react",
   "version": "1.3.0",
   "private": true,
+  "homepage": "http://muhammadidreesshaikh.github.io/dominus-freight-react-dashboard",
   "dependencies": {
     "bootstrap": "3.3.7",
     "chartist": "0.10.1",
@@ -21,6 +22,7 @@
     "@types/googlemaps": "3.30.19",
     "@types/markerclustererplus": "2.1.33",
     "@types/react": "16.8.13",
+    "gh-pages": "^3.1.0",
     "typescript": "3.4.3"
   },
   "scripts": {
@@ -28,6 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "compile-sass": "node-sass src/assets/sass/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.css",
     "minify-sass": "node-sass src/assets/sass/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.min.css --output-style compressed",
